--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="wdApp" ng-controller="IndexController">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -32,7 +32,7 @@
 
 
   </head>
-  <body ng-cloak
+  <body ng-cloak ng-app="wdApp"
     data-0="color: #666; background-color: rgba(0,0,0, 0.9);"
     data-175="color: #999; background-color: rgba(255,255,255, 0.7);">
     <header id="header" class="col-12">
