fixes of first commit

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     data-175="color: #999; background-color: rgba(255,255,255, 0.7);">
     <header id="header" class="col-12">
       <h3 id="logo">see.through.glass</h3>
-      <p id="banner" class="col-12">a social blog for those who hallucinate. anonymously leave your hallucination story and help others get a sense of community!</p>
+      <p id="banner" class="col-12">a group blog for those who dream. anonymously leave your dream story!</p>
     </header>
 <!-- main view --><div class="col-lg-12 row" ui-view></div><!-- main view -->
     <!-- Footer -->
