--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
     <title>waking dream</title>
-
+    <link href="css/reset.css" rel="stylesheet" />
     <link href="components/bootstrap/css/bootstrap.css" rel="stylesheet"/>
     <link href="components/bootstrap/css/bootstrap-theme.css" rel="stylesheet"/>
 
