--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,9 @@
   <body ng-cloak ng-app="wdApp"
     data-0="color: #666; background-color: rgba(0,0,0, 0.9);"
     data-175="color: #999; background-color: rgba(255,255,255, 0.7);">
-    <header id="header" class="col-12">
+    <header id="header" class="col-lg-12">
       <h3 id="logo">see.through.glass</h3>
-      <p id="banner" class="col-12">a group blog for those who dream. anonymously leave your dream story!</p>
+      <p id="banner">a group blog for those who dream. anonymously leave your dream story!</p>
     </header>
 <!-- main view --><div class="col-lg-12 row" ui-view></div><!-- main view -->
     <!-- Footer -->
