--- a/app/index.html
+++ b/app/index.html
@@ -4,21 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
-    <title>waking dream</title>
+    <title>see.through.glass</title>
     <link href="css/reset.css" rel="stylesheet" />
-    <link href="components/bootstrap/css/bootstrap.css" rel="stylesheet"/>
-    <link href="components/bootstrap/css/bootstrap-theme.css" rel="stylesheet"/>
 
-    <link href="css/webfonts/questa_regular_macroman/questaregular.css" rel="stylesheet"/>
+    <link href="css/fonts/nexascript_thin_macroman/stylesheet.css" rel="stylesheet"/>
+    <link href="css/fonts/nexascript_light_macroman/stylesheet.css" rel="stylesheet"/>
+    <link href="css/fonts/nexascript_regular_macroman/stylesheet.css" rel="stylesheet"/>
+    <link href="css/fonts/nexascript_semibold_macroman/stylesheet.css" rel="stylesheet"/>
+    <link href="css/fonts/nexascript_bold_macroman/stylesheet.css" rel="stylesheet"/>
+    <link href="css/fonts/nexascript_heavy_macroman/stylesheet.css" rel="stylesheet"/>
+
     <link href="css/style.css" rel="stylesheet"/>
     <link href="css/hover.css" rel="stylesheet"/>
 
     <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/underscore.js"></script>
-    <script src="js/vendor/moment.js"></script>
-    <script src="js/vendor/skrollr.min.js" ></script>
-
-    <script src="components/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="js/angular/angular.js"></script>
     <script src="js/angular/angular-ui-router.js"></script>
@@ -32,19 +31,28 @@
 
 
   </head>
-  <body ng-cloak ng-app="wdApp"
-    data-0="color: #666; background-color: rgba(0,0,0, 0.9);"
-    data-175="color: #999; background-color: rgba(255,255,255, 0.7);">
-    <header id="header" class="col-lg-12">
-      <h3 id="logo">see.through.glass</h3>
+  <body ng-cloak ng-app="wdApp">
+    <header>
+      <h1 id="logo">see.through.glass</h1>
       <p id="banner">a group blog for those who dream. anonymously leave your dream story!</p>
     </header>
-<!-- main view --><div class="col-lg-12 row" ui-view></div><!-- main view -->
-    <!-- Footer -->
-    <footer class="col-lg-12 row"></footer>
-    <script type="text/javascript">
-    var s = skrollr.init({'forceHeight':false});
-    </script>
+
+<!-- main view --><div ui-view></div><!-- main view -->
+
+    <aside>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- see.through.glass -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-6458298285737303"
+             data-ad-slot="8449774206"
+             data-ad-format="auto"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </aside>
+    <footer></footer>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
