--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
   </head>
   <body ng-cloak ng-app="wdApp">
     <header>
-      <h1 id="logo">see.through.glass</h1>
+      <h1 id="logo"><span class="color1">see.</span><span class="color2">through.</span><span class="color3">glass</span></h1>
       <p id="banner">a group blog for those who dream. anonymously leave your dream story!</p>
     </header>
 
